--- a/AnalisisNE/Intro.tex
+++ b/AnalisisNE/Intro.tex
@@ -3,7 +3,7 @@
 Cuando Newton y Leibniz trabajaron en la fundamentación del cálculo, una
 de sus diferencias fue la definición de límite. Mientras Newton lo
 definió de la forma en la que se ha enseñado principalmente, la
-definición $\e$ y $\updelta$. Leibniz, lo definia de una forma que
+definición $\e$ y $\delta$. Leibniz, lo definia de una forma que
 incluso parece una versión más amigable que la de Newton. Leibniz
 consideraba números infinitamente pequeños, de tal forma que fueran
 menores que cualquier número positivo pero mayores a $0$. Junto con
