--- a/AnalisisNE/Filtros.tex
+++ b/AnalisisNE/Filtros.tex
@@ -1,6 +1,6 @@
 \section{Filtros}
 
-Los filtros son, como se mencionó, objetos de la teoría de conjuntos.
+Los filtros son, como se mencionó, son objetos de la teoría de conjuntos.
 Como su nombre indica, son objetos que filtran, de forma análoga a lo que
 puede hacer un colador. Para esta sección, se considerará $I$ como un
 conjunto no vacío, esto último es necesario para la definición de filtro.
